--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "./node_modules/.bin/mocha ./src/spec/mocha-specs --recursive --reporter spec",
-    "test:part2": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part2/ --recursive --reporter spec",
-    "test:part3": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part3/ --recursive --reporter spec",
-    "test:part4": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part4/ --recursive --reporter spec",
-    "test:part5": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part5/ --recursive --reporter spec",
-    "test:part6": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part6/ --recursive --reporter spec",
-    "test:part7": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part7/ --recursive --reporter spec",
-    "tutor-test": "./node_modules/.bin/mocha ./src/spec/mocha-specs --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run",
-    "tutor-test:part2": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part2/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part2",
-    "tutor-test:part3": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part3/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part3",
-    "tutor-test:part4": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part4/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part4",
-    "tutor-test:part5": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part5/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part5",
-    "tutor-test:part6": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part6/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part6",
-    "tutor-test:part7": "./node_modules/.bin/mocha ./src/spec/mocha-specs/part7/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part7",
-    "mocha-spec": "./node_modules/.bin/mocha ./src/spec/mocha-specs/ --reporter spec",
-    "mocha-json": "./node_modules/.bin/mocha ./src/spec/mocha-specs/ --reporter json",
+    "test": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs --recursive --reporter spec",
+    "test:part2": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part2/ --recursive --reporter spec",
+    "test:part3": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part3/ --recursive --reporter spec",
+    "test:part4": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part4/ --recursive --reporter spec",
+    "test:part5": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part5/ --recursive --reporter spec",
+    "test:part6": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part6/ --recursive --reporter spec",
+    "test:part7": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part7/ --recursive --reporter spec",
+    "tutor-test": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run",
+    "tutor-test:part2": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part2/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part2",
+    "tutor-test:part3": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part3/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part3",
+    "tutor-test:part4": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part4/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part4",
+    "tutor-test:part5": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part5/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part5",
+    "tutor-test:part6": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part6/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part6",
+    "tutor-test:part7": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/part7/ --recursive --reporter json & ng test --config tutor-karma.conf.js --single-run --part part7",
+    "mocha-spec": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/ --reporter spec",
+    "mocha-json": "D:/backend/Angular/Project/Angular-AlbumStoreProductPage/node_modules/.bin/mocha D:/backend/Angular/Project/Angular-AlbumStoreProductPage/src/spec/mocha-specs/ --reporter json",
     "karma-spec": "ng test --config tutor-karma.conf.js --single-run",
     "lint": "ng lint",
     "e2e": "ng e2e"
